# halflife

./: CMakeLists.txt
cl_dll/: GameStudioModelRenderer.cpp  GameStudioModelRenderer_Sample.cpp  MOTD.cpp  StudioModelRenderer.cpp  ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  cl_util.h  entity.cpp  health.cpp  hud_bench.cpp  hud_servers.cpp  menu.cpp  scoreboard.cpp  util.cpp  util_vector.h  vgui_ConsolePanel.h  vgui_ControlConfigPanel.cpp  vgui_ScorePanel.h  vgui_int.cpp  voice_status.cpp  voice_status.h
common/: interface.cpp  port.h
dlls/: Wxdebug.cpp  animation.cpp  cbase.h  extdll.h
dmc/cl_dll/: GameStudioModelRenderer.cpp  MOTD.cpp  StudioModelRenderer.cpp  ammo.cpp  battery.cpp  cl_util.h  com_weapons.cpp  death.cpp  flashlight.cpp  health.cpp  hud.cpp  hud_servers.cpp  input.cpp  menu.cpp  message.cpp  saytext.cpp  scoreboard.cpp  status_icons.cpp  statusbar.cpp  text_message.cpp  util.cpp  util_vector.h  vgui_int.cpp  vgui_viewport.h  view.cpp
dmc/dlls/: animation.cpp  extdll.h
dmc/pm_shared/: pm_debug.c  pm_shared.c
game_shared/: bitvec.h  perf_counter.h  shared_util.cpp  shared_util.h  vgui_checkbutton2.cpp  voice_banmgr.cpp  voice_gamemgr.cpp  voice_status.cpp  voice_status_hud.cpp
game_shared/bot/: bot_profile.h
ricochet/cl_dll/: GameStudioModelRenderer.cpp  StudioModelRenderer.cpp  ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  battery.cpp  cl_util.h  com_weapons.cpp  death.cpp  flashlight.cpp  geiger.cpp  health.cpp  hud.cpp  menu.cpp  message.cpp  saytext.cpp  status_icons.cpp  statusbar.cpp  text_message.cpp  train.cpp  util.cpp  util_vector.h  vgui_ConsolePanel.h  vgui_ControlConfigPanel.cpp  vgui_TeamFortressViewport.h  vgui_discobjects.cpp  vgui_int.cpp  voice_status.cpp
ricochet/dlls/: animation.cpp  extdll.h
ricochet/pm_shared/: pm_shared.c
utils/common/: cmdlib.h  l3dslib.c  lbmlib.c  trilib.c  wadlib.c
utils/makels/: makels.cpp
utils/mdlviewer/: mdlviewer.cpp  studio_utils.cpp
utils/sprgen/: spritegn.h
utils/studiomdl/: bmpread.c  studiomdl.c  tristrip.c  write.c
utils/vgui/include/: VGUI_Dar.h  VGUI_FileInputStream.h  VGUI_TextGrid.h
utils/xwad/: xwad.c
